added comments and fixed the navigation link styles

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
+
     <!-- Semantic header for implementing and describing the header and nav bar section -->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
+
         <!-- Semantic navbar for main site navigation and page structure -->
         <nav>
             <ul>
@@ -26,16 +28,21 @@
                 </li>
             </ul>
         </nav>
+
     </header>
+
     <!-- Semantic Main element for all content specific to this page  -->
     <main>
+
         <!-- applied semantic figure with alt description of the background image -->
         <figure class="hero">
             <img src="./Develop/assets/images/digital-marketing-meeting.jpg" alt="Marketing team discussing a design in a meeting.">
         </figure>
-        <!-- write some comment about articles -->
+
+        <!-- Using a semantic article tag to describe and section our marketing services.  -->
         <article class="content">
-            <!-- write something about this section -->
+
+            <!-- Section describing Search Engine Optimization Service -->
             <section class="search-engine-optimization">
                 <img src="./Develop/assets/images/search-engine-optimization.jpg" class="float-left" />
                 <h2>Search Engine Optimization</h2>
@@ -43,7 +50,8 @@
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </p>
             </section>
-            <!-- write something about this section -->
+
+            <!-- Section describing our service for  managing online reputation -->
             <section id="online-reputation-management" class="online-reputation-management">
                 <img src="./Develop/assets/images/online-reputation-management.jpg" class="float-right" />
                 <h2>Online Reputation Management</h2>
@@ -51,7 +59,8 @@
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </p>
             </section>
-            <!-- write something about this section -->
+
+            <!-- Section describing our service for  social media marketing strategies -->
             <section id="social-media-marketing" class="social-media-marketing">
                 <img src="./Develop/assets/images/social-media-marketing.jpg" class="float-left" />
                 <h2>Social Media Marketing</h2>
@@ -59,13 +68,16 @@
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
                 </p>
             </section>
+
         </article>
-        <!-- write something about this aside section -->
+
+        <!-- Aside panel outlining our service benefits -->
         <aside class="benefits">
-            <!-- write something about this section -->
+
+            <!-- Section describing the lead generation benefits -->
             <section class="benefit-lead">
                 <h3>Lead Generation</h3>
-                <!-- write something about this figure and caption -->
+                <!-- lead funnel figure and lead generation caption -->
                 <figure>
                     <img src="./Develop/assets/images/lead-generation.png" />
                     <figcaption>
@@ -73,10 +85,11 @@
                     </figcaption>
                 </figure>
             </section>
-            <!-- write something about this section -->
+
+            <!-- Section describing the brand awareness benefits -->
             <section class="benefit-brand">
                 <h3>Brand Awareness</h3>
-                <!-- write something about this figure and caption -->
+                <!-- 'Bright Idea' figure and brand awareness caption -->
                 <figure>
                     <img src="./Develop/assets/images/brand-awareness.png" />
                     <figcaption>
@@ -84,10 +97,11 @@
                     </figcaption>
                 </figure>
             </section>
-            <!-- write something about this section -->
+
+            <!-- Section describing cost management benefits -->
             <section class="benefit-cost">
                 <h3>Cost Management</h3>
-                <!-- write something about this figure and caption -->
+                <!-- 'Savings Generator' figure and cost-management caption -->
                 <figure>
                     <img src="./Develop/assets/images/cost-management.png" />
                     <figcaption>
@@ -95,15 +109,19 @@
                     </figcaption>
                 </figure>
             </section>
+
         </aside>
+
     </main>
-    <!-- write something about this footer -->
+
+    <!-- semantic footer for displaying copyright notices -->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
+
 </body>
 
 </html>
