--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <!-- Section describing Search Engine Optimization Service -->
             <section class="search-engine-optimization">
-                <img src="./Develop/assets/images/search-engine-optimization.jpg" class="float-left" />
+                <img src="./Develop/assets/images/search-engine-optimization.jpg" class="float-left" alt="Notepad with a sketched diagram of search engine optimization acronym and related benefits." />
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -53,7 +53,7 @@
 
             <!-- Section describing our service for  managing online reputation -->
             <section id="online-reputation-management" class="online-reputation-management">
-                <img src="./Develop/assets/images/online-reputation-management.jpg" class="float-right" />
+                <img src="./Develop/assets/images/online-reputation-management.jpg" class="float-right" alt="Laptop displaying a bar graph with a positive trend and the title 'Reputation'."/>
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -62,7 +62,7 @@
 
             <!-- Section describing our service for  social media marketing strategies -->
             <section id="social-media-marketing" class="social-media-marketing">
-                <img src="./Develop/assets/images/social-media-marketing.jpg" class="float-left" />
+                <img src="./Develop/assets/images/social-media-marketing.jpg" class="float-left" alt="Table at social media meeting with different social media terms spread out."/>
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -79,7 +79,7 @@
                 <h3>Lead Generation</h3>
                 <!-- lead funnel figure and lead generation caption -->
                 <figure>
-                    <img src="./Develop/assets/images/lead-generation.png" />
+                    <img src="./Develop/assets/images/lead-generation.png" alt="funnel with cog going in one end and money coming out of the other end." />
                     <figcaption>
                         Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                     </figcaption>
@@ -91,7 +91,7 @@
                 <h3>Brand Awareness</h3>
                 <!-- 'Bright Idea' figure and brand awareness caption -->
                 <figure>
-                    <img src="./Develop/assets/images/brand-awareness.png" />
+                    <img src="./Develop/assets/images/brand-awareness.png" alt="suit and tie icon with a bright light bulb for a head."/>
                     <figcaption>
                         Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                     </figcaption>
@@ -103,7 +103,7 @@
                 <h3>Cost Management</h3>
                 <!-- 'Savings Generator' figure and cost-management caption -->
                 <figure>
-                    <img src="./Develop/assets/images/cost-management.png" />
+                    <img src="./Develop/assets/images/cost-management.png" alt="gear cog and coin icons." />
                     <figcaption>
                         As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                     </figcaption>
