--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 
     <!-- Semantic header for implementing and describing the header and nav bar section -->
-    <header class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+    <header>
+        <h1>Hori<span>seo</span>n</h1>
 
         <!-- Semantic navbar for main site navigation and page structure -->
         <nav>
@@ -43,27 +43,27 @@
         <article class="content">
 
             <!-- Section describing Search Engine Optimization Service -->
-            <section class="search-engine-optimization">
-                <img src="./Develop/assets/images/search-engine-optimization.jpg" class="float-left" alt="Notepad with a sketched diagram of search engine optimization acronym and related benefits." />
-                <h2>Search Engine Optimization</h2>
+            <section class="service-body">
+                <img src="./Develop/assets/images/search-engine-optimization.jpg" class="service-image float-left" alt="Notepad with a sketched diagram of search engine optimization acronym and related benefits." />
+                <h2 class="service-title">Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </p>
             </section>
 
             <!-- Section describing our service for  managing online reputation -->
-            <section id="online-reputation-management" class="online-reputation-management">
-                <img src="./Develop/assets/images/online-reputation-management.jpg" class="float-right" alt="Laptop displaying a bar graph with a positive trend and the title 'Reputation'."/>
-                <h2>Online Reputation Management</h2>
+            <section class="service-body" id="online-reputation-management">
+                <img src="./Develop/assets/images/online-reputation-management.jpg" class="service-image float-right" alt="Laptop displaying a bar graph with a positive trend and the title 'Reputation'."/>
+                <h2 class="service-title">Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </p>
             </section>
 
             <!-- Section describing our service for  social media marketing strategies -->
-            <section id="social-media-marketing" class="social-media-marketing">
-                <img src="./Develop/assets/images/social-media-marketing.jpg" class="float-left" alt="Table at social media meeting with different social media terms spread out."/>
-                <h2>Social Media Marketing</h2>
+            <section class="service-body" id="social-media-marketing">
+                <img src="./Develop/assets/images/social-media-marketing.jpg" class="service-image float-left" alt="Table at social media meeting with different social media terms spread out."/>
+                <h2 class="service-title">Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
                 </p>
@@ -75,11 +75,11 @@
         <aside class="benefits">
 
             <!-- Section describing the lead generation benefits -->
-            <section class="benefit-lead">
-                <h3>Lead Generation</h3>
+            <section class="benefit-body">
+                <h3 class="benefit-title">Lead Generation</h3>
                 <!-- lead funnel figure and lead generation caption -->
                 <figure>
-                    <img src="./Develop/assets/images/lead-generation.png" alt="funnel with cog going in one end and money coming out of the other end." />
+                    <img class="benefit-image" src="./Develop/assets/images/lead-generation.png" alt="funnel with cog going in one end and money coming out of the other end." />
                     <figcaption>
                         Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                     </figcaption>
@@ -87,11 +87,11 @@
             </section>
 
             <!-- Section describing the brand awareness benefits -->
-            <section class="benefit-brand">
-                <h3>Brand Awareness</h3>
+            <section class="benefit-body">
+                <h3 class="benefit-title">Brand Awareness</h3>
                 <!-- 'Bright Idea' figure and brand awareness caption -->
                 <figure>
-                    <img src="./Develop/assets/images/brand-awareness.png" alt="suit and tie icon with a bright light bulb for a head."/>
+                    <img class="benefit-image" src="./Develop/assets/images/brand-awareness.png" alt="suit and tie icon with a bright light bulb for a head."/>
                     <figcaption>
                         Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                     </figcaption>
@@ -99,11 +99,11 @@
             </section>
 
             <!-- Section describing cost management benefits -->
-            <section class="benefit-cost">
-                <h3>Cost Management</h3>
+            <section class="benefit-body">
+                <h3 class="benefit-title">Cost Management</h3>
                 <!-- 'Savings Generator' figure and cost-management caption -->
                 <figure>
-                    <img src="./Develop/assets/images/cost-management.png" alt="gear cog and coin icons." />
+                    <img class="benefit-image" src="./Develop/assets/images/cost-management.png" alt="gear cog and coin icons." />
                     <figcaption>
                         As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                     </figcaption>
@@ -115,7 +115,7 @@
     </main>
 
     <!-- semantic footer for displaying copyright notices -->
-    <footer class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
