added comments to styles.css and made changes to readme file

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </figure>
 
         <!-- Using a semantic article tag to describe and section our marketing services.  -->
-        <article class="content">
+        <article>
 
             <!-- Section describing Search Engine Optimization Service -->
             <section class="service-body">
